--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -7,28 +7,37 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Войти" HorizontalAlignment="Left" Margin="400,287,0,0" VerticalAlignment="Top" Height="48" Width="326" Background="#FFF96060" Foreground="White">
+        <Button Content="Войти" HorizontalAlignment="Left" Margin="400,287,0,0" VerticalAlignment="Top" Height="48" Width="326" Background="#FFF96060" Foreground="White" BorderBrush="{x:Null}" FontSize="18">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="15 15 5 5"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button Content="Регистрация" HorizontalAlignment="Left" Margin="400,353,0,0" VerticalAlignment="Top" Height="48" Width="327" Background="#FFF96060" Foreground="White">
+        <Button Content="Регистрация" HorizontalAlignment="Left" Margin="400,353,0,0" VerticalAlignment="Top" Height="48" Width="327" Background="#FFF96060" Foreground="White" BorderBrush="{x:Null}" FontSize="18">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="5 5 15 15"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Image HorizontalAlignment="Left" Height="177" Margin="32,29,0,0" VerticalAlignment="Top" Width="202" Source="/logo.png"/>
+        <Image HorizontalAlignment="Left" Height="194" Margin="32,29,0,0" VerticalAlignment="Top" Width="229" Source="/logo.png" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-1.565"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
         <Label Content="Добро пожаловать!" HorizontalAlignment="Left" Margin="392,42,0,0" VerticalAlignment="Top" Height="50" Width="342" FontSize="28"/>
         <Label Content="Почта" HorizontalAlignment="Left" Margin="392,121,0,0" VerticalAlignment="Top" FontSize="18"/>
-        <TextBox HorizontalAlignment="Left" Margin="400,155,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="327" BorderBrush="{x:Null}" CaretBrush="Black" Background="White"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,155,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="327" BorderBrush="{x:Null}" CaretBrush="Black" Background="White" Foreground="#FFC2C2C2" Text="Введите почту"/>
         <Label Content="Пароль" HorizontalAlignment="Left" Margin="392,183,0,0" VerticalAlignment="Top" FontSize="18" RenderTransformOrigin="0.244,0.62"/>
-        <TextBox HorizontalAlignment="Left" Margin="400,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326" Background="{x:Null}" BorderBrush="{x:Null}"/>
-        <Button Content="Восстановить пароль" HorizontalAlignment="Left" Margin="605,248,0,0" VerticalAlignment="Top" Click="Button_Click" BorderBrush="{x:Null}" Background="{x:Null}"/>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="0" Margin="401,235,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
+        <TextBox HorizontalAlignment="Left" Margin="400,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326" Background="{x:Null}" BorderBrush="{x:Null}" Text="Введите пароль" Foreground="#FFC2C2C2"/>
+        <Button Content="Восстановить пароль" HorizontalAlignment="Left" Margin="605,248,0,0" VerticalAlignment="Top" Click="Button_Click" BorderBrush="{x:Null}" Background="{x:Null}" FontSize="14"/>
+        <Border BorderBrush="#FFC2C2C2" BorderThickness="1" HorizontalAlignment="Left" Height="0" Margin="401,235,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
             <Border.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -38,7 +47,7 @@
                 </TransformGroup>
             </Border.RenderTransform>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="1" Margin="401,178,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
+        <Border BorderBrush="#FFC2C2C2" BorderThickness="1" HorizontalAlignment="Left" Height="1" Margin="401,178,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
             <Border.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -48,7 +57,7 @@
                 </TransformGroup>
             </Border.RenderTransform>
         </Border>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="1" Margin="401,237,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
+        <Border BorderBrush="#FFC2C2C2" BorderThickness="1" HorizontalAlignment="Left" Height="1" Margin="401,237,0,0" VerticalAlignment="Top" Width="326" RenderTransformOrigin="0.5,0.5">
             <Border.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
