--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Войти" HorizontalAlignment="Left" Margin="400,287,0,0" VerticalAlignment="Top" Height="48" Width="326" Background="#FFF96060" Foreground="White" BorderBrush="{x:Null}" FontSize="18" Click="Button_Click_1">
+        <Button x:Name="Login" Content="Войти" HorizontalAlignment="Left" Margin="400,287,0,0" VerticalAlignment="Top" Height="48" Width="326" Background="#FFF96060" Foreground="White" BorderBrush="{x:Null}" FontSize="18" Click="Login_Click">
             <Button.Resources>
                 <Style TargetType="Border">
                     <Setter Property="CornerRadius" Value="15 15 5 5"/>
